--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,18 @@
 // Fonts
-@import url("https://fonts.googleapis.com/css?family=Nunito");
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 
-@import "./toiler/index.scss";
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
+@import './toiler/index';
+
+.card {
+    color: black;
+}
+
+.dropdown-item {
+    color: #16181b;
+}
