--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,13 +1,13 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 
 // Variables
-@import 'variables';
+@import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 
-@import './toiler/index';
+@import "./toiler/index";
 
 .card {
     color: black;
